Initial Content Commit

--- a/index.html
+++ b/index.html
@@ -3,8 +3,35 @@
 <html>
     <head>
         <title>William Staud</title>
+    	<meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+        <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
     <body>
-        <h1>Hello World</h1>
+        <div class="navBar"></div>
+        <div class="fullscreen" id="landingCover">
+            <div id="coverText">To <span class="bold">boldly</span> go where no developer has gone before.</div>  
+        </div>
+        <div class="container">
+            <div class="fullWidth">
+                <div class="subContainer menu" id="aboutMenu">
+                    <div id="aboutMenuText">About Me</div>
+                </div>
+                <div class="subContainer" id="about">
+                    <div class="reactiveCenter"><img id="myPhoto" src="/img/me.jpg">
+                    <div class="bold heading" id="aboutHeading">Background</div>
+                    <div class="content" id="backgroundContent">Hello, my name is William Staud. I am a student at Codeup, studying to be a Full Stack Web Developer with a focus on the front-end. Before this path in my life, I servered in the Air Force as a sattelite opperator. </div>
+                    <div class="bold heading" id="designHeading">Design</div>
+                    <div class="content" id="designContent"><span class="bold">Simple, fluid and funcitonal.</span> That is my design philoiphy. A website shoud immediatly draw the user in the moment it loads, and it should load fast. From there the experience needs to feel modern, yet reservered. And above all else, the site needs to function and funciton well. I like my sites to support as many devices and screen sizes as possible. That's why I employe the use of many tools as needed alongside my custom CSS and JavaScript... such as: Bootstrap, ReactJS, Vue, Jquery, etc.</div>
+                </div>
+            </div>
+
+            <div class="subContainer menu" id="myWorkMenu">
+                <div id="myWorkMenuText">My Work</div>
+            </div>
+            <div class="subContainer" id="myWork">
+                
+            </div>
+        </div>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+        <script src="/js/main.js"></script>
     </body>
-</html>
