Add skills chart and udpate styling

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <!-- Will add to this later -->
             <div class="fullwidth grayBox">
                 <div class="grid grid-pad grayBoxGrid">
-                    <h1 class="centerTextAbsolute col-1-1">my background</h1>
+                    <img id="chart" src="/img/skillsChart.png">
                 </div>
             </div>
             <!--  -->
