Add mobile dropdown menu and update Enterprise opacity

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <!-- Start of content. Used Simple Grid for everything between the navbar and footer -->
         <div class="container">
             <!-- Basic nav bar with social media icons. Can change color and properties of them within CSS -->
+            <div class="mobileNav">
+                <a href="#" id="mobileLogo">William Staud</a>
+            </div>
             <div class="nav">
                 <a href="#" id="logo">William Staud</a>
                 <div id="links">
