--- a/index.html
+++ b/index.html
@@ -34,10 +34,18 @@
                     <a href="#">contact</a>
                 </div>
                 <div id="socialMedia">
-                    <a href="#"><img class="svg social-link" id="linkdedin" src="/img/linkedin.svg"></a>
-                    <a href="https://github.com/xconstaud"><img class="svg social-link" id="github" src="/img/github.svg"></a>
-                    <a href="#"><img class="svg social-link" id="inbox" src="/img/inbox.svg"></a>
-                    <a href="https://www.youtube.com/user/steeleknightfootball"><img class="svg social-link" id="youtube" src="/img/youtube.svg"></a>
+                    <a href="#">
+                        <img class="svg social-link mobileHide" id="linkdedin" src="/img/linkedin.svg">
+                    </a>
+                    <a href="https://github.com/xconstaud">
+                        <img class="svg social-link mobileHide" id="github" src="/img/github.svg">
+                    </a>
+                    <a href="#">
+                        <img class="svg social-link mobileHide" id="inbox" src="/img/inbox.svg">
+                    </a>
+                    <a href="https://www.youtube.com/user/steeleknightfootball">
+                        <img class="svg social-link mobileHide" id="youtube" src="/img/youtube.svg">
+                    </a>
                 </div>
             </div>
             <!-- Wrapped the grids within a fullwidth class to give page the apperance of full content backgrounds -->
@@ -85,7 +93,33 @@
                     </div>
                 </div>
             </div>
-            <div class="footer"></div>
+            <div class="footer">
+                <div class="grid footerGrid">
+                    <div class="col-1-3 footerLinks">
+                        <ul>
+                            <li><a href="">william.staud@gmail.com</a></li>
+                            <li><a href="https://github.com/xconstaud">https://github.com/xconstaud</a></li>
+                        </ul>
+                    </div>
+                    <div class="footerCopyright col-1-3">
+                        <p>©2017 - William Staud</p>
+                    </div>
+                    <div class="footerIcons col-1-3">
+                        <a href="#">
+                            <img class="svg svgGray social-link" id="linkdedin" src="/img/linkedin.svg">
+                        </a>
+                        <a href="https://github.com/xconstaud">
+                            <img class="svg svgGray social-link" id="github" src="/img/github.svg">
+                        </a>
+                        <a href="#">
+                            <img class="svg svgGray social-link" id="inbox" src="/img/inbox.svg">
+                        </a>
+                        <a href="https://www.youtube.com/user/steeleknightfootball">
+                            <img class="svg svgGray social-link" id="youtube" src="/img/youtube.svg">
+                        </a>
+                    </div>
+                </div>
+            </div>
 
             
         </div>
