Update shadow of whiteBoxes

--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             </div>
             <!-- Wrapped the grids within a fullwidth class to give page the apperance of full content backgrounds -->
             <!--  -->
-            <div class="fullwidth">
-                <div class="whiteBox grid grid-pad">
+            <div class="fullwidth whiteBox">
+                <div class="grid grid-pad">
                     <div id="aboutMeDiv" class="col-6-12">
                         <h1 id="aboutMe">about me</h1>
                         <h2 id="summary">I'm a student studying to be a Full Stack Developer with a focus on Front End</h2>
@@ -70,8 +70,8 @@
                 </div>
             </div>
             <!--  -->
-            <div class="fullwidth">
-                <div id="moreInfoBox" class="whiteBox grid grid-pad">
+            <div class="fullwidth whiteBox">
+                <div id="moreInfoBox" class="grid grid-pad">
                     <div class="col-7-12">
                         <img id="enterprise" src="/img/enterprise.png">
                     </div>
