Update README and small styling tweaks

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="cover">
             <div class="centerTextAbsolute">
                 <h1 id="coverName">WILLIAM STAUD</h1>
-                <h2 id="coverDes">aspiring front end developer</h2>
+                <h2 id="coverDes">Full Stack Web Developer</h2>
             </div>
             <!-- The background itself. Had to throw it in it's own div to lower it's opacity-->
             <div class="coverBackground"></div>
@@ -54,7 +54,7 @@
                 <div class="grid grid-pad">
                     <div id="aboutMeDiv" class="col-6-12">
                         <h1 id="aboutMe">about me</h1>
-                        <h2 id="summary">I'm a student studying to be a Full Stack Developer with a focus on Front End</h2>
+                        <h2 id="summary">I'm a student at Codeup studying to be a Full Stack Developer with a focus on Front End</h2>
                         <p id="aboutMeText">I love thinking of something awesome and being able to make it come to life with the power of Full Stack development. I believe in simple, fast, yet powerful web applicaitons that draw the user on first contact. I enjoy all aspects of programming from the logic and structure to creating beautiful UI designs; and I make it all happen with a wide variety of tools from HTML and CSS to Javascript and PHP.</p>
                         <p id="aboutMeExtra">When I'm not coding, you'll find me partaking in a array of nerdy things from video and tabletop games, to video production and riding my motorcycle.</p>
                     </div>
@@ -127,7 +127,7 @@
 
         <!-- scripts -->
         <script src="/js/jquery-3.1.1.min.js"></script>
-        <script src="/js/main.js"></script>
+        <script src="/js/main-min.js"></script>
     </body>
 
 </html>
