Add portfolio banner.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             <div class="nav">
                 <a href="#" id="logo">William Staud</a>
                 <div id="links">
-                    <a href="#">about</a>
-                    <a href="#">portfolio</a>
+                    <a href="/index.html">about</a>
+                    <a href="/portfolio.html">portfolio</a>
                     <a href="#">blog</a>
                     <a href="#">contact</a>
                 </div>
