Update portfolio "mywork" layout

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,16 +49,33 @@
                 </div>
             </div>
 
-            <!--<div class="fullwidth whiteBox">
-                <div class="grid grid-pad">
-                    <div class="projectTile col-2-12">Personal Site</div>
-                    <div class="projectTile col-2-12">LCARS/Simple Simon</div>
-                    <div class="projectTile col-2-12">Blog</div>
-                    <div class="projectTile col-2-12">EXODS</div>
-                    <div class="projectTile col-2-12">Codeup Web Exercises</div>
-                    <div class="projectTile col-2-12">GitHub</div>
+            <div class="fullwidth whiteBox">
+                <div class="grid">
+                    <div id="sitePhoto" class="centerCover projectTile col-6-12"></div>
+                    <div id="siteBox" class="projectTile col-6-12"></div>
                 </div>
-            </div>-->
+                <div class="grid">
+                    <div id="lcarsBox" class="projectTile col-6-12"></div>
+                    <div id="lcarsPhoto" class="centerCover projectTile col-2-12"></div>
+                </div> 
+                <div class="grid">
+                    <div id="blogPhoto" class="centerCover projectTile col-2-12"></div>
+                    <div id="blogBox" class="projectTile col-6-12"></div>
+                </div>
+                <div class="grid">
+                    <div id="exodsBox" class="projectTile col-6-12"></div>
+                    <div id="exodsPhoto" class="centerCover projectTile col-2-12"></div>
+                </div>
+                <div class="grid">
+                    <div id="exercisesPhoto" class="centerCover projectTile col-2-12"></div>
+                    <div id="exercisesBox" class="projectTile col-6-12"></div>
+                </div>
+                <div class="grid">
+                    <div id="githubBox" class="projectTile col-6-12"></div>
+                    <div id="githubPhoto" class="centerCover projectTile col-2-12"></div>
+                </div>
+                
+            </div>
 
             <div class="footer">
                 <div class="grid footerGrid">
