--- a/portfolio.html
+++ b/portfolio.html
@@ -52,29 +52,67 @@
             <div class="fullwidth whiteBox">
                 <div class="grid">
                     <div id="sitePhoto" class="centerCover projectTile col-6-12"></div>
-                    <div id="siteBox" class="projectTile col-6-12"></div>
+                    <div id="siteBox" class="projectTile col-6-12">
+                        <div class="boxText whiteText">
+                            <h1>my site</h1>
+                            <p>A site demonstrating my progress as a Full Stack Developer.</p>
+                            <button id="siteRepoBtn" class="blueButton">Github Repo</button>
+                        </div>
+                    </div>
                 </div>
                 <div class="grid">
-                    <div id="lcarsBox" class="projectTile col-6-12"></div>
+                    <div id="lcarsBox" class="projectTile col-6-12">
+                        <div class="boxText whiteText">
+                            <h1>simple simon</h1>
+                            <p>A Simple Simon game designed and based off Star Treks LCARS computer.</p>
+                            <button id="lcarsBtn" class="blueButton">Demo</button>
+                            <button id="lcarsRepoBtn" class="blueButton">Github Repo</button>
+                        </div>
+                    </div>
                     <div id="lcarsPhoto" class="centerCover projectTile col-2-12"></div>
                 </div> 
                 <div class="grid">
                     <div id="blogPhoto" class="centerCover projectTile col-2-12"></div>
-                    <div id="blogBox" class="projectTile col-6-12"></div>
+                    <div id="blogBox" class="projectTile col-6-12">
+                        <div class="boxText whiteText">
+                            <h1>my blog</h1>
+                            <p>A site where I share some of my thoughts and views.</p>
+                            <button id="blogBtn" class="blueButton">Coming Soon</button>
+                            <button id="blogRepoBtn" class="blueButton">Coming Soon</button>
+                        </div>
+                    </div>
                 </div>
                 <div class="grid">
-                    <div id="exodsBox" class="projectTile col-6-12"></div>
+                    <div id="exodsBox" class="projectTile col-6-12">
+                        <div class="boxText whiteText">
+                            <h1>exods</h1>
+                            <p>Upload a photo and see where it was taken with additional hidden information.</p>
+                            <button id="exodsBtn" class="blueButton">Coming Soon</button>
+                            <button id="exodsRepoBtn" class="blueButton">Coming Soon</button>
+                        </div>
+                    </div>
                     <div id="exodsPhoto" class="centerCover projectTile col-2-12"></div>
                 </div>
                 <div class="grid">
                     <div id="exercisesPhoto" class="centerCover projectTile col-2-12"></div>
-                    <div id="exercisesBox" class="projectTile col-6-12"></div>
+                    <div id="exercisesBox" class="projectTile col-6-12">
+                        <div class="boxText whiteText">
+                            <h1>codeup exercises</h1>
+                            <p>A collection of my front end Codeup exercises.</p>
+                            <button id="exercisesRepoBtn" class="blueButton">Coming Soon</button>
+                        </div>
+                    </div>
                 </div>
                 <div class="grid">
-                    <div id="githubBox" class="projectTile col-6-12"></div>
+                    <div id="githubBox" class="projectTile col-6-12">
+                        <div class="boxText whiteText">
+                            <h1>github projects</h1>
+                            <p>Check out all of my projects on Github.</p>
+                            <button id="githubRepoBtn" class="blueButton">Coming Soon</button>
+                        </div>
+                    </div>
                     <div id="githubPhoto" class="centerCover projectTile col-2-12"></div>
                 </div>
-                
             </div>
 
             <div class="footer">
