Remove codekit and add portfoio tiles

--- a/portfolio.html
+++ b/portfolio.html
@@ -49,8 +49,8 @@
                 </div>
             </div>
 
-            <div class="fullwidth whiteBox">
-                <div class="grid">
+            <div id="portfolio" class="fullwidth whiteBox">
+                <div>
                     <div id="sitePhoto" class="centerCover projectTile col-6-12"></div>
                     <div id="siteBox" class="projectTile col-6-12">
                         <div class="boxText whiteText">
@@ -60,7 +60,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="grid">
+                <div>
                     <div id="lcarsBox" class="projectTile col-6-12">
                         <div class="boxText whiteText">
                             <h1>simple simon</h1>
@@ -69,10 +69,10 @@
                             <button id="lcarsRepoBtn" class="blueButton">Github Repo</button>
                         </div>
                     </div>
-                    <div id="lcarsPhoto" class="centerCover projectTile col-2-12"></div>
+                    <div id="lcarsPhoto" class="centerCover projectTile col-6-12"></div>
                 </div> 
-                <div class="grid">
-                    <div id="blogPhoto" class="centerCover projectTile col-2-12"></div>
+                <div>
+                    <div id="blogPhoto" class="centerCover projectTile col-6-12"></div>
                     <div id="blogBox" class="projectTile col-6-12">
                         <div class="boxText whiteText">
                             <h1>my blog</h1>
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="grid">
+                <div>
                     <div id="exodsBox" class="projectTile col-6-12">
                         <div class="boxText whiteText">
                             <h1>exods</h1>
@@ -91,27 +91,27 @@
                             <button id="exodsRepoBtn" class="blueButton">Coming Soon</button>
                         </div>
                     </div>
-                    <div id="exodsPhoto" class="centerCover projectTile col-2-12"></div>
+                    <div id="exodsPhoto" class="centerCover projectTile col-6-12"></div>
                 </div>
-                <div class="grid">
-                    <div id="exercisesPhoto" class="centerCover projectTile col-2-12"></div>
+                <div>
+                    <div id="exercisesPhoto" class="centerCover projectTile col-6-12"></div>
                     <div id="exercisesBox" class="projectTile col-6-12">
                         <div class="boxText whiteText">
                             <h1>codeup exercises</h1>
                             <p>A collection of my front end Codeup exercises.</p>
-                            <button id="exercisesRepoBtn" class="blueButton">Coming Soon</button>
+                            <button id="exercisesRepoBtn" class="blueButton">GitHub Repo</button>
                         </div>
                     </div>
                 </div>
-                <div class="grid">
+                <div>
                     <div id="githubBox" class="projectTile col-6-12">
                         <div class="boxText whiteText">
                             <h1>github projects</h1>
                             <p>Check out all of my projects on Github.</p>
-                            <button id="githubRepoBtn" class="blueButton">Coming Soon</button>
+                            <button id="githubRepoBtn" class="blueButton">GitHub Repo</button>
                         </div>
                     </div>
-                    <div id="githubPhoto" class="centerCover projectTile col-2-12"></div>
+                    <div id="githubPhoto" class="centerCover projectTile col-6-12"></div>
                 </div>
             </div>
 
