Update images and make them smaller. Update email links.

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <a href="https://github.com/xconstaud">
                         <img class="svg social-link mobileHide" id="github" src="/img/github.svg">
                     </a>
-                    <a href="#">
+                    <a href="mailto:william.staud@gmail.com">
                         <img class="svg social-link mobileHide" id="inbox" src="/img/inbox.svg">
                     </a>
                     <a href="https://www.youtube.com/user/steeleknightfootball">
@@ -97,7 +97,7 @@
                 <div class="grid footerGrid">
                     <div class="col-1-3 footerLinks">
                         <ul>
-                            <li><a href="">william.staud@gmail.com</a></li>
+                            <li><a href="mailto:william.staud@gmail.com">william.staud@gmail.com</a></li>
                             <li><a href="https://github.com/xconstaud">https://github.com/xconstaud</a></li>
                         </ul>
                     </div>
@@ -111,7 +111,7 @@
                         <a href="https://github.com/xconstaud">
                             <img class="svg svgGray social-link" id="github" src="/img/github.svg">
                         </a>
-                        <a href="#">
+                        <a href="mailto:william.staud@gmail.com">
                             <img class="svg svgGray social-link" id="inbox" src="/img/inbox.svg">
                         </a>
                         <a href="https://www.youtube.com/user/steeleknightfootball">
