--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" >
         <link rel="stylesheet" type="text/css" href="/css/simplegrid.css">
-        <link rel="stylesheet" type="text/css" href="/css/main-min.css">
+        <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
 
     <body>
@@ -31,7 +31,7 @@
                     <a href="https://github.com/xconstaud">
                         <img class="svg social-link mobileHide" id="github" src="/img/github.svg">
                     </a>
-                    <a href="#">
+                    <a href="mailto:william.staud@gmail.com">
                         <img class="svg social-link mobileHide" id="inbox" src="/img/inbox.svg">
                     </a>
                     <a href="https://www.youtube.com/user/steeleknightfootball">
@@ -119,7 +119,7 @@
                 <div class="grid footerGrid">
                     <div class="col-1-3 footerLinks">
                         <ul>
-                            <li><a href="">william.staud@gmail.com</a></li>
+                            <li><a href="mailto:william.staud@gmail.com">william.staud@gmail.com</a></li>
                             <li><a href="https://github.com/xconstaud">https://github.com/xconstaud</a></li>
                         </ul>
                     </div>
@@ -133,7 +133,7 @@
                         <a href="https://github.com/xconstaud">
                             <img class="svg svgGray social-link" id="github" src="/img/github.svg">
                         </a>
-                        <a href="#">
+                        <a href="mailto:william.staud@gmail.com">
                             <img class="svg svgGray social-link" id="inbox" src="/img/inbox.svg">
                         </a>
                         <a href="https://www.youtube.com/user/steeleknightfootball">
@@ -149,7 +149,7 @@
 
         <!-- scripts -->
         <script src="/js/jquery-3.1.1.min.js"></script>
-        <script src="/js/main-min.js"></script>
+        <script src="/js/main.js"></script>
     </body>
 
 </html>
