Update button styles

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
                 <div id="resumeDiv" class="centerTextAbsolute">
                     <h1>Download my Resume</h1>
                     <h3>or view my work below</h3>
-                    <button class="blueButton">Download</button>
+                    <button class="blueButton button">Download</button>
                 </div>
             </div>
 
@@ -56,7 +56,7 @@
                         <div class="boxText whiteText">
                             <h1>my site</h1>
                             <p>A site demonstrating my progress as a Full Stack Developer.</p>
-                            <button id="siteRepoBtn" class="blueButton">Github Repo</button>
+                            <button id="siteRepoBtn" class="button purpleButton">Github Repo</button>
                         </div>
                     </div>
                 </div>
@@ -65,8 +65,8 @@
                         <div class="boxText whiteText">
                             <h1>simple simon</h1>
                             <p>A Simple Simon game designed and based off Star Treks LCARS computer.</p>
-                            <button id="lcarsBtn" class="blueButton">Demo</button>
-                            <button id="lcarsRepoBtn" class="blueButton">Github Repo</button>
+                            <button id="lcarsBtn" class="button lcarsButton">Demo</button>
+                            <button id="lcarsRepoBtn" class="button lcarsButton">Github Repo</button>
                         </div>
                     </div>
                     <div id="lcarsPhoto" class="centerCover projectTile col-6-12"></div>
@@ -77,8 +77,8 @@
                         <div class="boxText whiteText">
                             <h1>my blog</h1>
                             <p>A site where I share some of my thoughts and views.</p>
-                            <button id="blogBtn" class="blueButton">Coming Soon</button>
-                            <button id="blogRepoBtn" class="blueButton">Coming Soon</button>
+                            <button id="blogBtn" class="button lightGreenButton">Coming Soon</button>
+                            <button id="blogRepoBtn" class="button lightGreenButton">Coming Soon</button>
                         </div>
                     </div>
                 </div>
@@ -87,8 +87,8 @@
                         <div class="boxText whiteText">
                             <h1>exods</h1>
                             <p>Upload a photo and see where it was taken with additional hidden information.</p>
-                            <button id="exodsBtn" class="blueButton">Coming Soon</button>
-                            <button id="exodsRepoBtn" class="blueButton">Coming Soon</button>
+                            <button id="exodsBtn" class="button blackButton">Coming Soon</button>
+                            <button id="exodsRepoBtn" class="button blackButton">Coming Soon</button>
                         </div>
                     </div>
                     <div id="exodsPhoto" class="centerCover projectTile col-6-12"></div>
@@ -99,7 +99,7 @@
                         <div class="boxText whiteText">
                             <h1>codeup exercises</h1>
                             <p>A collection of my front end Codeup exercises.</p>
-                            <button id="exercisesRepoBtn" class="blueButton">GitHub Repo</button>
+                            <button id="exercisesRepoBtn" class="button darkGreenButton">GitHub Repo</button>
                         </div>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                         <div class="boxText whiteText">
                             <h1>github projects</h1>
                             <p>Check out all of my projects on Github.</p>
-                            <button id="githubRepoBtn" class="blueButton">GitHub Repo</button>
+                            <button id="githubRepoBtn" class="button whiteButton">GitHub Repo</button>
                         </div>
                     </div>
                     <div id="githubPhoto" class="centerCover projectTile col-6-12"></div>
