Convert to SASS. Update .gitignore.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1" >
         <link rel="stylesheet" type="text/css" href="/css/simplegrid.css">
-        <link rel="stylesheet" type="text/css" href="/css/main-min.css">
+        <link rel="stylesheet" type="text/css" href="/css/main.css">
     </head>
 
     <body>
@@ -127,7 +127,7 @@
 
         <!-- scripts -->
         <script src="/js/jquery-3.1.1.min.js"></script>
-        <script src="/js/main-min.js"></script>
+        <script src="/js/main.js"></script>
     </body>
 
 </html>
