Add calculator tile and application

--- a/portfolio.html
+++ b/portfolio.html
@@ -48,8 +48,9 @@
                     <button class="blueButton button">Download</button>
                 </div>
             </div>
-
+            <!--Portfolio Tiles-->
             <div id="portfolio" class="fullwidth whiteBox">
+                <!--Site Tile-->
                 <div>
                     <div id="sitePhoto" class="centerCover projectTile col-6-12"></div>
                     <div id="siteBox" class="projectTile col-6-12">
@@ -60,6 +61,7 @@
                         </div>
                     </div>
                 </div>
+                <!--LCARS Tile -->
                 <div>
                     <div id="lcarsBox" class="projectTile col-6-12">
                         <div class="boxText whiteText">
@@ -71,17 +73,19 @@
                     </div>
                     <div id="lcarsPhoto" class="centerCover projectTile col-6-12"></div>
                 </div> 
+                <!--Calc Tile-->
                 <div>
-                    <div id="blogPhoto" class="centerCover projectTile col-6-12"></div>
-                    <div id="blogBox" class="projectTile col-6-12">
+                    <div id="calcPhoto" class="centerCover projectTile col-6-12"></div>
+                    <div id="calcBox" class="projectTile col-6-12">
                         <div class="boxText whiteText">
-                            <h1>my blog</h1>
-                            <p>A site where I share some of my thoughts and views.</p>
-                            <button id="blogBtn" class="button lightGreenButton">Coming Soon</button>
-                            <button id="blogRepoBtn" class="button lightGreenButton">Coming Soon</button>
+                            <h1>calculator</h1>
+                            <p>Javascript based calculator.</p>
+                            <button id="calcBtn" class="button calcButton">Demo</button>
+                            <button id="calcRepoBtn" class="button calcButton">Github Repo</button>
                         </div>
                     </div>
                 </div>
+                <!--EXODS Tile-->
                 <div>
                     <div id="exodsBox" class="projectTile col-6-12">
                         <div class="boxText whiteText">
@@ -93,8 +97,20 @@
                     </div>
                     <div id="exodsPhoto" class="centerCover projectTile col-6-12"></div>
                 </div>
+                <!--Blog Tile-->
                 <div>
-                    <div id="exercisesPhoto" class="centerCover projectTile col-6-12"></div>
+                    <div id="blogPhoto" class="centerCover projectTile col-6-12"></div>
+                    <div id="blogBox" class="projectTile col-6-12">
+                        <div class="boxText whiteText">
+                            <h1>my blog</h1>
+                            <p>A site where I share some of my thoughts and views.</p>
+                            <button id="blogBtn" class="button lightGreenButton">Coming Soon</button>
+                            <button id="blogRepoBtn" class="button lightGreenButton">Coming Soon</button>
+                        </div>
+                    </div>
+                </div>
+                <!--Exercises Tile-->
+                <div>
                     <div id="exercisesBox" class="projectTile col-6-12">
                         <div class="boxText whiteText">
                             <h1>codeup exercises</h1>
@@ -102,8 +118,11 @@
                             <button id="exercisesRepoBtn" class="button darkGreenButton">GitHub Repo</button>
                         </div>
                     </div>
+                    <div id="exercisesPhoto" class="centerCover projectTile col-6-12"></div>
                 </div>
+                <!--Github Tile-->
                 <div>
+                    <div id="githubPhoto" class="centerCover projectTile col-6-12"></div>
                     <div id="githubBox" class="projectTile col-6-12">
                         <div class="boxText whiteText">
                             <h1>github projects</h1>
@@ -111,10 +130,9 @@
                             <button id="githubRepoBtn" class="button whiteButton">GitHub Repo</button>
                         </div>
                     </div>
-                    <div id="githubPhoto" class="centerCover projectTile col-6-12"></div>
                 </div>
             </div>
-
+            <!--Footer-->
             <div class="footer">
                 <div class="grid footerGrid">
                     <div class="col-1-3 footerLinks">
