Update lcars and add user instructions

--- a/lcars.html
+++ b/lcars.html
@@ -171,7 +171,7 @@
             <div id="game">
                 <!-- Ask user if ready -->
                 <div id="promptReady">
-                    <div id="readyText">Incoming Borg Attack. Are you ready?</div>
+                    <div id="readyText">Incoming Borg Attack. Are you ready?<p>Use arrow keys to match incoming shield patterns.</p></div>
                     <button class="readyButton" id="readyYes">Proceed</button>
                 </div> 
                 <!-- Enterprise shields -->
