Add blog page and set to under construction.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <body>
         <!-- Full screen cover image with centered text -->
-        <div class="cover">
+        <div class="aboutCover">
             <div class="centerTextAbsolute">
                 <h1 id="coverName">WILLIAM STAUD</h1>
                 <h2 id="coverDes">Full Stack Web Developer</h2>
@@ -30,7 +30,7 @@
                 <div id="links">
                     <a href="/index.html">about</a>
                     <a href="/portfolio.html">portfolio</a>
-                    <a href="#">blog</a>
+                    <a href="/blog.html">blog</a>
                     <a href="#">contact</a>
                 </div>
                 <div id="socialMedia">
