--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
                 <div id="links">
                     <a href="/index.html">about</a>
                     <a href="/portfolio.html">portfolio</a>
-                    <a href="#">blog</a>
+                    <a href="/blog.html">blog</a>
                     <a href="#">contact</a>
                 </div>
                 <div id="socialMedia">
